RESULTS/AutoSpec/raw_results/out-4o-frama-c/38_0002/38_merged.txt
/home/yangfp/AutoSpec/AutoSpec3/out/38_0002/38_merged.c:12:1: error: unterminated comment
   12 | /*@;
      | ^
